# stim_work

./: .dockerignore  .gitignore  CLAUDE.md  bb_code_144_12_12.ipynb  bb_code_72_12_6.ipynb  bb_code_sim.py  gross_code_lpu_tdg.ipynb  gross_code_lpu_tdg.py  gross_lpu_analysis_bravyi.ipynb  pyproject.toml  surface_code_sim.py  test.py
benchmarks/: bench.py
container/: Containerfile  README.md  benchmark.sbatch  onset_topup.sbatch  requirements.txt  run.podman.sbatch  smoke.sbatch  smoke_decode.py
docs/: bb144_splitting_vs_is.md  cluster_runbook.md
docs/tour_de_gross/: SPLITTING.md
experiments/: README.md  manifest.yaml  requirements.txt
experiments/bravyi/: bb144_onset_fraction.py  bb6_fig10_sweep.py  run_bb144_z_noise_models.sh  split_bb144_better.py  split_bb144_multiseed.py
experiments/configs/: bb144_memory.yaml  bb288_memory.yaml  bb6_memory.yaml  bb6_memory_m100.yaml  gen_channel_configs.py  gross_automorphism.yaml  gross_lpu_idle.yaml  gross_lpu_x1.yaml  gross_lpu_y1.yaml  gross_lpu_z1.yaml
experiments/methods/: make_error_model_bb_vs_surface.py  make_error_model_comparison.py  onset_topup_72.py  qc_wave.py  run_onset_topup_local.sh  (+1 more)
src/: bb6_report.py  bb_code_sim.py  experiment_runner.py  gross_code_lpu_tdg.py  gross_lpu_analysis_bravyi.py  importance_sampling.py  lambda_analysis.py  lpu_graph.py  min_weight.py  splitting.py
tests/: test_bb6_fig10.py  test_channel_filter.py  test_experiment_runner.py  test_importance_sampling.py  test_lambda_analysis.py  test_lpu_circuits.py  test_lpu_graph.py  test_min_weight.py  test_sims.py  test_splitting.py
(+134 files in other folders)
